--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,14 @@
 .DS_Store
 *.pem
 
+/prisma
+
+
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
 
 # vercel
 .vercel
