--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
+
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0",
-    "next": "14.2.6",
+    "@prisma/client": "^5.19.0",
+    "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -19,9 +21,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.6",
+    "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    "prisma": "^5.18.0",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
