--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "crons": [
       {
-        "path": "/api/reset-counter",
+        "path": "/api/cron",
         "schedule": "*/2 * * * *"
       }
     ]
